Use getDeclaredConstructor() instead of getConstructor()